# edi

./: Cargo.toml  README.md
examples/: parse.rs  sample_edi.txt
resources/: schemas.csv
src/: edi_document.rs  edi_parse_error.rs  functional_group.rs  functional_group_header.rs  generic_segment.rs  interchange_control.rs  interchange_control_header.rs  lib.rs  segment.rs  tokenizer.rs  transaction.rs
tests/: envelope_validation_tests.rs  tests.rs
