[package]
name = "edi_parser"
version = "0.1.0"
authors = ["alex-hansen <ahansen@stackline.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1"
lazy_static = "1.4.0"
serde = { version = "1.0.101", features = ["derive"] }