[package]
name = "edi"
version = "0.1.1"
authors = ["alex-hansen <ahansen@stackline.com>"]
edition = "2018"
license-file = "LICENSE.md"
description = "Parser for X12 EDI files"
homepage = "https://github.com/sezna/edi"
documentation = "https://docs.rs/edi"
repository = "https://github.com/sezna/edi"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1"
lazy_static = "1.4.0"
serde = { version = "1.0.101", features = ["derive"] }
