[package]
name = "edi"
version = "0.2.0"
authors = ["Alex Hansen <alex@alex-hansen.com>"]
edition = "2018"
license-file = "LICENSE.md"
description = "Parser for X12 EDI files"
homepage = "https://github.com/sezna/edi"
documentation = "https://docs.rs/edi"
repository = "https://github.com/sezna/edi"
readme = "README.md"

[dependencies]
csv = "1.1"
lazy_static = "1.4.0"
serde = { version = "1.0.101", features = ["derive"] }
